<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <EditText
            android:id="@+id/customer_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:hint="Enter the Name"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Intsructions_heading"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_margin="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Intsructions_1"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Intsructions_2"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Intsructions_3"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:layout_margin="18dp"/>
        <EditText
            android:id="@+id/question1_answer_server"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:hint="@string/question_1answer"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_margin="18dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2a"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2b"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/question2_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2c"
                    android:textSize="20sp" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2d"
                    android:textSize="20sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_margin="18dp"/>
            <CheckBox
                android:id="@+id/question3_answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3a"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/question3_answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3b"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/question3_answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3c"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/question3_answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3d"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_margin="18dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/schoolzonesign" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4a"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4b"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/question4_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4c"
                    android:textSize="20sp" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4d"
                    android:textSize="20sp" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/text_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:background="@color/colorPrimary"
            android:onClick="onSubmitCalculatePoints"/>

    </LinearLayout>
</ScrollView>
